version 2.0a (7.0 ready) - major refactoring (java 8+ cleanup), group logging, dark mode, timers expansion (w/ Jeshruk), jdbc update, general cleanup; new launcher bundled